# 2526-student-practices-10th-grade-nikolai_yanuzov-rumen_spasov

./: .gitignore
Cinema_Project/: CMakeLists.txt  resorces.qrc  resources.qrc
Cinema_Project/sql_assets/: users.sql
Cinema_Project/src/: CMakeLists.txt  backend.cpp  backend.h  main.cpp
Cinema_Project/src/AppController/: AppController.cpp  AppController.hpp  CMakeLists.txt  main.cpp
Cinema_Project/src/Core/: CMakeLists.txt
Cinema_Project/src/Core/auth/: CMakeLists.txt  authcontroller.cpp  authcontroller.h  login.cpp  login.hpp  register.cpp  register.hpp
Cinema_Project/src/UI/: Button1.qml  CMakeLists.txt  Header.qml  Login_page.qml  Main.qml  Main_menu.qml  Scrim.qml
Cinema_Project/src/UI/pages/: Authentication_page.qml  CMakeLists.txt  Login_page.qml
raylib-premake/: Cinema_Project.sln
raylib-premake/Admin/: Admin.vcxproj  Admin.vcxproj.filters  admin.cpp  admin.h
raylib-premake/Data-Base-Manager/: Data-Base-Manager.vcxproj  Data-Base-Manager.vcxproj.filters  DataBaseManager.cpp
raylib-premake/Design/: Design.vcxproj  Design.vcxproj.filters
raylib-premake/src/: main.cpp
